// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application-status should match the snapshot with custom status 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon
    class="application-status__icon application-status__icon--?"
  />
  <!--v-if-->
</div>
`;

exports[`application-status should match the snapshot with status DOWN 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon
    class="application-status__icon application-status__icon--DOWN"
    icon="times-circle"
  />
  <!--v-if-->
</div>
`;

exports[`application-status should match the snapshot with status OFFLINE 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon
    class="application-status__icon application-status__icon--OFFLINE"
    icon="minus-circle"
  />
  <!--v-if-->
</div>
`;

exports[`application-status should match the snapshot with status OUT_OF_SERVICE 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon
    class="application-status__icon application-status__icon--OUT_OF_SERVICE"
    icon="ban"
  />
  <!--v-if-->
</div>
`;

exports[`application-status should match the snapshot with status RESTRICTED 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon
    class="application-status__icon application-status__icon--RESTRICTED"
    icon="exclamation"
  />
  <!--v-if-->
</div>
`;

exports[`application-status should match the snapshot with status UNKNOWN 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon
    class="application-status__icon application-status__icon--UNKNOWN"
    icon="question-circle"
  />
  <!--v-if-->
</div>
`;

exports[`application-status should match the snapshot with status UP with Timestamp 1`] = `
<div
  class="application-status"
>
  <font-awesome-icon
    class="application-status__icon application-status__icon--UP"
    icon="check-circle"
  />
  <small
    class="hidden md:block"
  >
    14m
  </small>
</div>
`;
